test/fixtures/complex/invalid/basic_3.mf2
.foo {:hello} {foo} {bar}
{{}}
=== spans ===
                    .foo {:hello} {foo} {bar}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                                 ^^^^ 1:0-1:4
Pattern                                            1:2-1:2
Text                                               1:2-1:2
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is unrecognized. (at @0..25)
  .foo {:hello} {foo} {bar}↵{{}}
  ^^^^^^^^^^^^^^^^^^^^^^^^^
=== formatted ===
(cannot format due to fatal errors)
=== ast ===
ComplexMessage {
    span: @0..30,
    declarations: [],
    body: QuotedPattern {
        span: @26..30,
        pattern: Pattern {
            parts: [
                Text {
                    start: @28,
                    content: "",
                },
            ],
        },
    },
}